Fix side spacings for app-header, add quick-add-menu to mobile

--- a/frontend/src/global_styles/common/header/main-menu-toggle.sass
+++ b/frontend/src/global_styles/common/header/main-menu-toggle.sass
@@ -3,6 +3,3 @@
 
   @at-root .nosidebar &
     display: none
-
-  &--button
-    padding-left: 16px
